# PicoGamePad

./: #auto_saved_files#  .gitignore  .gitmodules  README.md  SolderingInduction.kicad_pcb  SolderingInduction.kicad_prl  SolderingInduction.kicad_pro  SolderingInduction.kicad_sch  SolderingInduction.kicad_sch-bak  SolderingInduction_missing3Dmodels.txt  bideogames.kicad_sch  connectors.kicad_sch  fp-info-cache  generic.kicad_wks  pcb.kicad_sch  usb_interface.kicad_sch
documentation/: README.md
firmware/: .gitignore  platformio.ini
firmware/src/: .gitignore  CMakeLists.txt  PicoGamePad.cpp  PicoGamePadAlt.cpp  config.cpp  gamepad.cpp  ledmanager.cpp  main.cpp  picogamepad.h  storage.cpp
firmware/src/include/: .gitignore  enums.h  gamepad.h  pleds.h  storage.h
firmware/src/lib/: .gitignore
firmware/src/lib/ws2812/: .gitignore  WS2812.cpp  WS2812.h  WS2812.pio
firmware/src/src/: .gitignore
fw/: .gitignore  build.sh  flash.sh  pinsToHeader.nb  rp2040-pinmap.txt
fw/src/: CMakeLists.txt  README.md  build.sh  event.cpp  flash.cpp  gamepad.cpp  led.cpp  main.c  main.cpp  picoSystem.cpp  storage.cpp  uart.cpp  usb.cpp  ws2812.pio
fw/src/controller/: README.md  XPadInput.h
fw/src/debug/: README.md
fw/src/include/: BoardConfig.h  descriptors.h  event.h  gamepad.h  gp2040.h  leds.h  picoSystem.h  pinAssignments.h  storage.h  timer.h  uart.h  usb.h
fw/src/led/: README.md  main.cpp  ws2812.pio
fw/src/usb/: README.md  controller.c
hardware/: .gitignore  PicoGamePad_V3_0_0_A.kicad_pcb  PicoGamePad_V3_0_0_A.kicad_prl  PicoGamePad_indev.kicad_pcb  PicoGamePad_indev.kicad_prl  PicoGamePad_indev.kicad_pro  PicoGamePad_indev.kicad_sch  fp-info-cache  fp-lib-table
hw/: README.md  fp-info-cache  (+4 more)
(+143 files in other folders)
